Bug 1260310 - Create servo style contexts from ServoStyleSet. r=heycam