layout/style/ServoStyleSet.h
@@ -114,6 +114,7 @@ public:
                                        EventStates aStateMask);
 
 private:
+  nsPresContext* mPresContext;
   UniquePtr<RawServoStyleSet> mRawSet;
   EnumeratedArray<SheetType, SheetType::Count,
                   nsTArray<RefPtr<ServoStyleSheet>>> mSheets;
